--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -27,6 +27,7 @@
     .panels {
       min-height: 100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -44,13 +45,24 @@
       font-size: 20px;
       background-size: cover;
       background-position: center;
+      flex: 1 1 auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
 
-    .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
+    /* .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
     .panel2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
     .panel3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
     .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
-    .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
+    .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); } */
+
+    .panel1 { background-image:url(./images/computer-4795762_1280.jpg); }
+    .panel2 { background-image:url(./images/crab-8060744_1280.jpg); }
+    .panel3 { background-image:url(./images/photo-1465188162913-8fb5709d6d57.jpg); }
+    .panel4 { background-image:url(./images/haze-7641511_1280.jpg); }
+    .panel5 { background-image:url(./images/fox-4893199_1280.jpg); }
+
 
     /* Flex Children */
     .panel > * {
@@ -64,7 +76,16 @@
       font-family: 'Amatic SC', cursive;
       text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
       font-size: 2em;
+      flex: 1 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
+
+    .panel > *:first-child { transform: translateY(-100%); }
+    .panel.open-active > *:first-child { transform: translateY(0%); }
+    .panel > *:last-child { transform: translateY(100%); }
+    .panel.open-active > *:last-child { transform: translateY(0%); }
 
     .panel p:nth-child(2) {
       font-size: 4em;
@@ -72,6 +93,7 @@
 
     .panel.open {
       font-size: 40px;
+      flex: 5;
     }
 
   </style>
@@ -106,6 +128,14 @@
   </div>
 
   <script>
+    const panels = document.querySelectorAll(".panel");
+
+    function toggleOpen () {
+      this.classList.toggle('open');
+      this.classList.toggle('open-active');
+    };
+
+    panels.forEach(ele => ele.addEventListener("click" , toggleOpen));
 
   </script>
 
