--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -19,10 +19,27 @@
     <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="./bellvuePark.png">
 
   <style>
+    :root {
+      --base: #ffc600;
+      --spacing: 10px;
+      --blur : 10px;
+    }
 
+    img {
+      padding: var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+      box-sizing: border-box;
+      height: 500px;
+      width: 800px;
+    }
+
+    .hl {
+      color: var(--base);
+    }
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -46,6 +63,17 @@
   </style>
 
   <script>
+    const inputs = document.querySelectorAll("input");
+    
+    inputs.forEach((ele) => {
+      ele.addEventListener("input", handleInputUpdate);
+      console.log(ele.dataset)
+    });
+
+    function handleInputUpdate (event) {
+      const suffix = this.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+    }
   </script>
 
 </body>
