--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,29 +38,57 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    console.table(inventors.filter((input) => {
+      return (input.year >= 1500 && input.year < 1600) ? true : false;
+    }));
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    console.log(inventors.map((input) => {
+      return `${input.first} ${input.last}`;
+    }));
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-
+    console.table(inventors.sort((a, b) => {
+      return (a.year > b.year) ? 1 : -1; 
+    }));
+   
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    console.log(inventors.reduce((accumulator, input) => {
+      return accumulator += (input.passed - input.year);
+    },0));
 
     // 5. Sort the inventors by years lived
+    console.table(inventors.sort((a, b) => {
+      return ((a.passed - a.year) > (b.passed - b.year)) ? 1 : -1; 
+    }));
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    /*
+    const category = document.querySelector(".mw-category");
+    const placeList = Array.from(category.querySelectorAll("a"));
+    placeList.filter((element) => (element.text.search("de") > 0) ? true : false);
+    */
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    console.table(people.sort((a,b) => {return (a > b) ? 1 : -1 }));
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
+    console.table(data.reduce((accumulator, input) => {
+      if (!accumulator[input]) {
+        accumulator[input] = 1;
+      } else {
+        accumulator[input]++;
+      }
+      return accumulator;
+     }, {}))
   </script>
 </body>
 </html>
