--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -18,6 +18,40 @@
 <script>
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
 
+let cities = [];
+
+fetch(endpoint)
+.then(blob => blob.json())
+.then(data => cities.push(...data));
+
+function findMatches (wordToMatch, cities) {
+  const regex = new RegExp(wordToMatch, 'gi');
+  return cities.filter(place => {
+    return place['city'].match(regex) || place['state'].match(regex);
+  });
+};
+
+const searchInput = document.querySelector(".search");
+const suggestions = document.querySelector(".suggestions");
+
+function displayMatches () {
+  let matchArray = findMatches(this.value, cities);
+  let html = matchArray.map(place => {
+    const regex = new RegExp(this.value, 'gi');
+    const cityName = place.city.replace(regex, `<span class="hl">${this.value}</span>`);
+    return `
+      <li>
+        <span class="name">${cityName}, ${place.state}</span>
+        <span class="population">${place.population}</span>
+      </li>
+    `;
+  });
+
+  suggestions.innerHTML = html.join('');
+}
+
+searchInput.addEventListener("keyup" , displayMatches);
+
 </script>
 </body>
 </html>
