--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,15 +27,28 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const currentDate = new Date();
+    let currentYear = currentDate.getFullYear();
+    console.log(`current year = ${currentYear}`);
+
+    const isOver19 = people.some((element) => (currentYear -element.year) >= 19);
+    console.log(`people array, is anyone over 19 = ${isOver19}`);
     // Array.prototype.every() // is everyone 19 or older?
+    const isEveryoneOver19 = people.every((element) => (currentYear -element.year) >= 19);
+    console.log(`people array, is everyone over 19 = ${isEveryoneOver19}`);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const findCommnet = comments.find((element) => element.id === 823423);
+    console.log(`comment ID 823423 = ${findCommnet.text}`);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const findCommnetIDX = comments.findIndex((element) => element.id === 823423);
+    comments.splice(findCommnetIDX, 1);
+    console.table(comments);
 
   </script>
 </body>
