--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -7,7 +7,60 @@
 </head>
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
+<button id="reset-canvas">RESET</button>
 <script>
+  const canvas = document.querySelector("#draw");
+
+  const canvasContext = canvas.getContext("2d");
+  canvas.width = window.innerWidth ;
+  canvas.height = window.innerHeight - 40;
+
+  canvasContext.strokeStyle = "#BADA55";
+  canvasContext.lineJoin ="round";
+  canvasContext.lineCap = "round";
+  canvasContext.lineWidth = 40;
+
+  let isDrawing = false;
+  let lastX = 0;
+  let lastY = 0;
+  let hue = 0;
+  let lineWidth_direction = false;
+
+  function draw(e) {
+    if (isDrawing) {
+      canvasContext.strokeStyle = `hsl(${hue}, 100%, 50%)`;
+      hue = (hue >= 360) ? 0 : hue += 1;
+
+      
+      console.log(e);
+      canvasContext.beginPath();
+      canvasContext.moveTo(lastX, lastY);
+      canvasContext.lineTo(e.offsetX, e.offsetY);
+      canvasContext.stroke();
+
+      [lastX, lastY] = [e.offsetX, e.offsetY];
+
+      if (canvasContext.lineWidth >= 100 || canvasContext.lineWidth <= 1) lineWidth_direction = !lineWidth_direction;
+      canvasContext.lineWidth = (lineWidth_direction) ? canvasContext.lineWidth + 1 : canvasContext.lineWidth -  1;
+
+    }
+  }
+
+  canvas.addEventListener("mousemove" , draw);
+  canvas.addEventListener("mousedown" , (e) => {
+    isDrawing = true;
+    lastX = e.offsetX;
+    lastY = e.offsetY;
+  });
+  canvas.addEventListener("mouseup" , (e) => isDrawing = false);
+  canvas.addEventListener("mouseout" , (e) => isDrawing = false);
+  
+  const resetCanvasBtn = document.querySelector("#reset-canvas");
+  resetCanvasBtn.addEventListener('click', (e) => {
+    console.log(e.target);
+    //canvasContext.reset();
+    canvasContext.clearRect(0, 0, canvas.width, canvas.height);
+  })
 </script>
 
 <style>
